<resources>
    <string name="app_name">Sri Sai Auto Care</string>

    <string name="user_registration">Contact Details</string>
    <string name="password_registration">Password</string>
    <string name="address_registration">Address Details </string>
    <string name="car_brand">Car Brand</string>
    <string name="car_registration">Car Details</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile">Enter Mobile Number (10 digits) </string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_user_reg_password">Enter Password (5+ chars) </string>
    <string name="prompt_confirmPassword">Enter Confirm Password (5+ chars)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forgot_pwd">Forgot Password</string>
    <string name="prompt_registered_email">Enter Registered Email</string>
    <string name="action_submit_button">SUBMIT</string>
    <string name="action_submit_short">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_mobile">Enter mobile number is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_password_are_not_equal">Password and Confirm Passwords are not equal</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">Contacts Permission</string>


    <string name="prompt_current_password">Enter Current Password </string>
    <string name="prompt_new_password">Enter New Password (5+ chars)</string>
    <string name="prompt_confirm_new_password">Enter Confirm New Password (5+ chars)</string>
    <string name="prompt_change_pwd_button">CHANGE PASSWORD</string>
    <string name="action_change_pwd_short">Change Password</string>
    <string name="show_current_password_text">Show Current Password</string>
    <string name="show_new_password_text">Show New Password</string>
    <string name="show_confirm_new_password_text">Show Confirm New Password</string>



    <string name="action_mobile_next">Next</string>
    <string name="action_next_short">Next</string>
    <string name="action_skip_short">Skip</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="title_activity_mobile">MobileActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="prompt_firstname">Enter First Name</string>
    <string name="prompt_lastname">Enter Last Name</string>
    <string name="prompt_email">Enter Email</string>


    <string name="prompt_building">Enter Flat No / House Name</string>
    <string name="prompt_area">Enter Apartment /Locality Name</string>
    <string name="prompt_city">Enter City</string>
    <string name="prompt_pincode">Enter Pin Code (Optional)</string>

    <string name="prompt_carname">Enter Car Name</string>
    <string name="select_carfueltype">Select Car Fuel Type</string>
    <string name="select_cartbodyype">Select Car Body Type</string>
    <string name="prompt_carmanfacturedate">Car Manufacture Date(Optional)</string>
    <string name="prompt_bookingID">Booking ID</string>
    <string name="prompt_repair_description">Paint Charges</string>
    <string name="Rs">\u20B9</string>

    <string name="action_upload">UPLOAD</string>

    <string name="show_password_text">Show Password</string>
    <string name="show_confirm_password_text">Show Confirm Password</string>

    <string name="action_settings">Settings</string>
    <string name="action_signup">CREATE ACCOUNT</string>
    <string name="title_activity_maps">Map</string>
    <!--string name="google_app_id">740742415644</string-->
    <string name="title_activity_user_registration">Sign in</string>
    <string name="title_activity_mobile_registration">Sign in</string>
    <string name="title_activity_address_registration">Sign in</string>
    <string name="title_activity_car_registration">Sign in</string>
    <string name="title_activity_quote">Quote</string>


    <string-array name="car_brands">
        <item>Chevrolet</item>
        <item>Datsun</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Mahindra</item>
        <item>Maruti Suzuki</item>
        <item>Nissan</item>
        <item>Renault</item>
        <item>Skoda</item>
        <item>Tata</item>
        <item>Toyota</item>
        <item>Volswagen</item>
    </string-array>

    <string-array name="car_values">
        <item>Alto 800</item>
        <item>Omni</item>
        <item>Eeco</item>
        <item>Alto K10</item>
        <item>Celerio</item>
        <item>Wagon R 1.0</item>
        <item>Stingray</item>
        <item>Ritz</item>
        <item>Swift</item>
        <item>Baleno</item>
        <item>Swift Dzire</item>
        <item>Ertiga</item>
        <item>Gypsy</item>
        <item>Vitara Brezza</item>
        <item>Ciaz</item>
        <item>S-Cross</item>
    </string-array>
    <string name="title_activity_forgot">Forgot Password</string>
    <string name="title_activity_change_password">Change Password</string>
</resources>
