<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile.autocare.ChangePasswordActivity">

    <ScrollView
        android:id="@+id/change_pwd_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mobile_change_pwd_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/currentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_current_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/showCurrentPasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_current_password_text"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/showNewPasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_new_password_text"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_new_password"
                    android:imeActionId="@+id/change_pwd_button"
                    android:imeActionLabel="@string/action_submit_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/showConfirmNewPasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_confirm_new_password_text"/>

            <Button
                android:id="@+id/change_pwd_button"
                style="?android:textAppearanceSmall"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_change_pwd_button"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
