<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordRegistrationActivity">

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mobile_registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_reg_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/showPasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password_text"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirmPassword"
                    android:imeActionId="@+id/mobileRegistration"
                    android:imeActionLabel="@string/action_next_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/confirmPasswordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_confirm_password_text"/>

            <Button
                android:id="@+id/mobile_registration_next_button"
                style="?android:textAppearanceSmall"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_next_short"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
