<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile.autocare.AddressRegistrationActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_building"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_area"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_pincode"
                    android:imeActionId="@+id/addressRegistration"
                    android:imeActionLabel="@string/action_next_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/address_registration_next_button"
                style="?android:textAppearanceSmall"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_next_short"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />
            <Button
                android:id="@+id/address_registration_skip_button"
                style="?android:textAppearanceSmall"
                android:background="@color/colorNegative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_skip_short"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
