<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile.autocare.QuoteActivity"
    android:layout_weight="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
    <TextView
        android:id="@+id/bookingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:textAppearanceLarge"
        android:text="@string/prompt_bookingID" />

    <TextView
        android:id="@+id/repairDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="?android:textAppearanceLarge"
        android:text="@string/prompt_repair_description"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

    <TextView
        android:id="@+id/bookingIdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:textAppearanceLarge"
        android:text="1246" />

    <TextView
        android:id="@+id/repairCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="?android:textAppearanceLarge"
        android:text="@string/Rs"/>
</LinearLayout>

</LinearLayout>
