<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile.autocare.UserRegistrationActivity">

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_firstname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lastname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                style="?android:textAppearanceSmall"
                android:background="?attr/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   +91        "
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold"
                android:padding="0dp"
                android:minWidth="0dp"/-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registration_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mobile"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <!--/LinearLayout-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/userRegistration"
                    android:imeActionLabel="@string/action_next_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <!--android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_reg_password"
                    android:imeActionId="@+id/userRegistration"
                    android:imeActionLabel="@string/action_next_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:focusable="false"
                    android:drawableRight="@drawable/invisible"/>

            </android.support.design.widget.TextInputLayout-->

            <Button
                android:id="@+id/user_registration_next_button"
                style="?android:textAppearanceSmall"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_next_short"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
